--- a/ch03.md
+++ b/ch03.md
@@ -19,11 +19,15 @@
 
 但是，反过来，如若你花费了几十分钟时间，听到的全都是无关紧要的内容，全都是你已经知道的信息，或者全都是简单到谁都明白的东西，你的感受如何呢？设身处地想一想，你的答案就在告诉你作为讲者应该讲些什么了……
 
-**你必须提供一些“干货”。**这是重点。
+**你必须提供一些“干货”。**
+
+这是重点。
 
 你可以开玩笑——为了活跃气氛；你可以顾左右而言其他——为了避免冲突；你可以嬉笑怒骂——为了掩饰一些你不愿意表达的什么，但是，你必须说点什么：重要的、未知的、复杂的。否则，听众会觉得不值。
 
-**只有干货肯定是不行的，正如纯粹的“营养餐”一定不好吃一样。**但是，如若没有干货，那你就是在忽悠，你就是在装，你就是不信任听众，你必然遭到听众的唾弃——或早或晚，别不服气，这是宿命，无法逃避。
+**只有干货肯定是不行的，正如纯粹的“营养餐”一定不好吃一样。**
+
+但是，如若没有干货，那你就是在忽悠，你就是在装，你就是不信任听众，你必然遭到听众的唾弃——或早或晚，别不服气，这是宿命，无法逃避。
 
 表象永远比实质更有吸引力，因为对很多人来说，能看到的只有表象，而实质却可能被很多人“视而不见”。所以，有些时候忽悠很成功，有些时候讲实话却并不被理解，但，这并不意味着说忽悠就是对的，讲实话就是傻的。
 
