Fix text format

--- a/ch01.md
+++ b/ch01.md
@@ -26,6 +26,6 @@
 
 如果你羡慕那些衣着光鲜的人，你平时就得衣着光鲜（当然那可能花销很大）。如果你羡慕那些幽默的人，你平时就要想尽一切办法修炼幽默——要知道郭德纲也好，黄西也罢，为了一个好笑话可能要挣扎很久很久才能够“妙手偶得之”；你要是暗自羡慕那些大大咧咧的人很潇洒，那你平日里就要放下架子，别再文绉绉；你要是羡慕那些引经据典的华丽，那就要在未来的许多年里饱读诗书（因为你过去没做，现在就必须补课）……
 
-**你是谁就是谁。**其实这并无所谓——只不过，你觉得“你应该显得更好一些”，殊不知，这恰恰是失败的根源，你不是在讲，而是在演，不是谁都可以做影帝的，这是现实。
+**你是谁就是谁**。其实这并无所谓——只不过，你觉得“你应该显得更好一些”，殊不知，这恰恰是失败的根源，你不是在讲，而是在演，不是谁都可以做影帝的，这是现实。
 
 “讲演”是个有误导性质的词汇。该讲就讲，别装，别演。
