--- a/ch03.md
+++ b/ch03.md
@@ -1,7 +1,7 @@
 （三）听众到底要什么？ 
 ======================
 
-你做为讲者，[没必要刻意取悦听众](ch02.md)，但，**你也确实应该满足听众。**否则，听众就会对你不满。
+你做为讲者，[没必要刻意取悦听众](ch02.md)，但，**你也确实应该满足听众**。否则，听众就会对你不满。
 
 听众到底想要什么呢？
 
