--- a/ch06.md
+++ b/ch06.md
@@ -15,7 +15,7 @@
 
 而在不同的场合里，讲话往往有对应的常见目的。比如，教学更多出现在课堂上，告知更多出现在广播中，探讨通常是在会议里，分享往往是小组，鼓动往往面对群众。当然，这不是绝对的，课堂里也会有分享和鼓动，会议中也可能有告知和教学……
 
-**对于新手来说，起点往往是分享。**而这个系列中，我们所关注的更多是“分享”，而后是“鼓动”。这两者是对普通人来说最重要的当众讲话之目的。
+**对于新手来说，起点往往是分享**。而这个系列中，我们所关注的更多是“分享”，而后是“鼓动”。这两者是对普通人来说最重要的当众讲话之目的。
 
 先说分享。
 
