--- a/ch10.md
+++ b/ch10.md
@@ -23,6 +23,6 @@
 
 首先要[保持心态的平和](ch09.md)，而后，认真记录听众的每一个反馈。其次，不要急于为自己辩解（不要把疑惑当作质疑），甚至不要急于回答问题，而是尝试着通过反向复述（您的意思是不是“……”）确定提问者的真正问题，而后再认真回答。
 
-不要怕“回答不出来”。**新手就是新手，需要磨练，这不丢人。丢人的是不懂装懂，死撑却撑不住。**听众对这种人是没有任何耐心的，换位思考一下吧，换作是你，可能会直接把这样的人归为某类，从此再不理睬。
+不要怕“回答不出来”。**新手就是新手，需要磨练，这不丢人。丢人的是不懂装懂，死撑却撑不住**。听众对这种人是没有任何耐心的，换位思考一下吧，换作是你，可能会直接把这样的人归为某类，从此再不理睬。
 
 一切无法回答、难以回答、回答的不够清楚的问题，都拿出纸笔记录下来，以备提醒自己回去做足功课。当场记录也会让听众明白你会认真考虑他们的问题的。而后，一定要告诉提问者，你回去会马上想办法弄清楚，并且会在第一时间向他反馈。这样做，不仅不丢人，相反，还可能会赢得尊重。
