--- a/ch27.md
+++ b/ch27.md
@@ -11,6 +11,6 @@
 
 再仔细注意一下就会发现，那些高明的讲者在“用某个事例（包括自己的经验）证明某个名言警句的正确性”的时候，整个谈话的重心其实也不会在那个名言警句上。他们往往只不过是从某一侧面证明或提及某个名言警句而已。并且，他们往往会把那些名言警句的意义延伸开来，引出一些新意才善罢甘休。
 
-俗语、成语、名言警句这类东西，生搬硬套过来，效果往往并不好。倒是有个技巧去处理这些大家“耳能熟详”的话语──**反其道而用之。**钱钟书先生就擅长这么做。他说的一句可以作为这种技巧的范例的说法是：
+俗语、成语、名言警句这类东西，生搬硬套过来，效果往往并不好。倒是有个技巧去处理这些大家“耳能熟详”的话语──**反其道而用之**。钱钟书先生就擅长这么做。他说的一句可以作为这种技巧的范例的说法是：
 
 > “狐狸对采摘不到的葡萄，不但想像它酸，也很可能想像它是分外地甜。”这是个小伎俩，但往往有大用处。
