--- a/ch30.md
+++ b/ch30.md
@@ -1,7 +1,7 @@
 （三十）要说清楚“是什么”更要说清楚“不是什么” 
 ============================================
 
-作为讲者，不仅要说清楚你想说的究竟是什么，更重要的是要说清楚**你所说的根本就不是什么。**不仅要把正面说清楚，还要花费（甚至可能更多的）气力把反面也讲清楚。
+作为讲者，不仅要说清楚你想说的究竟是什么，更重要的是要说清楚**你所说的根本就不是什么**。不仅要把正面说清楚，还要花费（甚至可能更多的）气力把反面也讲清楚。
 
 这是当众讲话与私下单独讲话最不一样的地方之一：听众不见得按照我们的思路想事儿，所以，我们的一些话很可能在他们那里引发我们之前全然想不到的结论。
 
