--- a/ch32.md
+++ b/ch32.md
@@ -1,7 +1,7 @@
 （三十二）小心被辅助工具绑架 
 ============================
 
-PowerPoint（Windows），抑或 Keynote（Mac），**都只是辅助工具。**它应该为讲者和讲者所讲述的话题服务。然而，很多的时候，很多讲者一不小心就会被这些辅助工具所绑架。
+PowerPoint（Windows），抑或 Keynote（Mac），**都只是辅助工具**。它应该为讲者和讲者所讲述的话题服务。然而，很多的时候，很多讲者一不小心就会被这些辅助工具所绑架。
 
 即便是辅助工具，也是需要学习和磨练才能够熟练使用的。很多人好像并不知道学习成本的存在，更不知道那成本的高昂，总是以为随便鼓捣一下就足够了——很傻很天真。
 
