--- a/ch02.md
+++ b/ch02.md
@@ -5,7 +5,7 @@
 
 既然已经决定投入时间坐在下面听你讲话，你的听众最不希望你惊慌、紧张、手足无措、语无伦次……他们最希望跟你一起度过愉悦的这段时光。听众的这种愿望，跟你一样强烈，正如你当然也不希望自己惊慌、紧张、手足无措、语无伦次一样。
 
-**在不了解你之前，没有人对你抱有任何看法。**就算你不是朋友，也起码不是敌人。
+**在不了解你之前，没有人对你抱有任何看法**。就算你不是朋友，也起码不是敌人。
 
 而所谓的信任你的听众，最重要的一方面就是记住并相信另外一个事实：**你的听众不需要你故意取悦他们。**
 
@@ -21,6 +21,6 @@
 
 另外一种低估听众智商的表现就是错把听众的探讨处理为敌意的挑衅。除非讲者自己已经犯了错误，或者没有说明白，听众不大可能抱有敌意。更多的时候，有些听众表现出讲者不曾预料到的反应，根本就没有任何敌意，却被低估了听众智商的讲者认为是挑衅，而后将“探讨”变成“声讨”——其实这是无论讲者还是听众都不愿意涉入的境地。
 
-**要相信听众。**相信他们是有判断力的，相信他们是有品位的，相信他们是有足够的智商和智慧的，相信他们是善良的，相信他们是公正的，相信他们拥有一切正面的品质。别说“那可不一定”——我们知道有些听众不是这样的，但，你所愿意与之沟通的听众难道不就是这样的么？而既然你无法仅凭外表分辨，那就只能相信“整体上来看，听众是值得信赖的”。
+**要相信听众**。相信他们是有判断力的，相信他们是有品位的，相信他们是有足够的智商和智慧的，相信他们是善良的，相信他们是公正的，相信他们拥有一切正面的品质。别说“那可不一定”——我们知道有些听众不是这样的，但，你所愿意与之沟通的听众难道不就是这样的么？而既然你无法仅凭外表分辨，那就只能相信“整体上来看，听众是值得信赖的”。
 
 如果做不到这点，那就算了，你那“不吐不快”的欲望最好还是收敛一下吧，闭上嘴可能结果更好一些。
