--- a/ch01.md
+++ b/ch01.md
@@ -5,7 +5,7 @@
 
 为了在台上从容、自如，请牢牢记住第一条铁律：千万别装。
 
-如果你平时就不是喜欢穿正装的人，千万不要为了演讲而换上正装，尽管你有最正当的理由——“这时正式场合，我应该正式一点……”因为你从未“适应”过正装，所以，那衣服无论多合身放在你身上就是别扭，无论是在你心里还是观众眼里。
+如果你平时就不是喜欢穿正装的人，千万不要为了演讲而换上正装，尽管你有最正当的理由——“这是正式场合，我应该正式一点……”因为你从未“适应”过正装，所以，那衣服无论多合身放在你身上就是别扭，无论是在你心里还是观众眼里。
 
 如果你平时就不是一个喜欢开玩笑的人，那就千万别为了讨好观众讲笑话。因为你从未有过成功讲笑话的经验，所以，再好的笑话也可能被你讲臭。
 
