--- a/ch07.md
+++ b/ch07.md
@@ -5,7 +5,7 @@
 
 很多“经典”讲演技巧书籍中都提到“最好用故事开头”。在我看来，这种建议尽管没什么不对，但，还没有深入实质。其实，是不是用故事开头并不重要，重要的是要“惊”到听众。不信，你就用一个每个人都知道的故事开头试试看？一定反应平平。
 
-“惊”是最容易获得听众好奇心的元素。赢得了听众的好奇心，他们就会很自然地进入全神贯注的状态。听众的这种状态，是讲者的福祉。没有什么比面对一群三心二意的听众更另讲者沮丧的事情了。
+“惊”是最容易获得听众好奇心的元素。赢得了听众的好奇心，他们就会很自然地进入全神贯注的状态。听众的这种状态，是讲者的福祉。没有什么比面对一群三心二意的听众更令讲者沮丧的事情了。
 
 相信我，“惊”甚至比“有趣”重要得多，因为绝大多数“有趣”也是从“惊”之中产生的，即，所谓的“惊喜”。
 
@@ -27,6 +27,6 @@
 -   演示一个超群的技艺
 -   ……
 
-每个人、每个时刻、每个场合、每个话题，都有独特之处，要花时间去考虑如何才能恰到好处且又合情合理地制造“惊”的效果。每个讲者有具有不同的属性，要根据自己的个性选择恰当的方式。
+每个人、每个时刻、每个场合、每个话题，都有独特之处，要花时间去考虑如何才能恰到好处且又合情合理地制造“惊”的效果。每个讲者又具有不同的属性，要根据自己的个性选择恰当的方式。
 
 这是一种能力，能通过长期练习和实践慢慢积累的能力。
