--- a/ch10.md
+++ b/ch10.md
@@ -13,7 +13,7 @@
 
 然而，当你对一群陌生人说，“有些人……”的时候，无论其中的哪一个都无法确定你所说的“有些人”是否包括他自己。于是，沟通差异已经开始悄悄地出现。如果讲者不注意这种差异的存在和它的重要影响，那么，其后的沟通就肯定会发生很多的困难。
 
-这只是一个很小的例子，“有些人……”这样一个常见而有貌似微不足道的句式而已。然而，几乎一切的地方都可能存在这种沟通差异，因果、比较、前提、价值观等等……所以，所谓的“说清楚”真的很难很难，因为你面对的不止是一个陌生人，而是很多很多陌生人。
+这只是一个很小的例子，“有些人……”这样一个常见而又貌似微不足道的句式而已。然而，几乎一切的地方都可能存在这种沟通差异，因果、比较、前提、价值观等等……所以，所谓的“说清楚”真的很难很难，因为你面对的不止是一个陌生人，而是很多很多陌生人。
 
 **要牢牢记住，听众是陌生人。至少，在他们接受你之前。**
 
