--- a/ch15.md
+++ b/ch15.md
@@ -15,7 +15,7 @@
 
 这好像是理所当然的事情，可是，如若你张开眼睛观察一下周遭的世界，就会发现，严格遵守这个原则的人少之又少。为什么呢？这个原则说起来容易做起来难。
 
-许多年前，我刚刚开始从事英语教学工作的时候，经常要像听众证明“考托福不需要传说中那么大的词汇量”。传说中需要一万两千词汇量，而我的结论是五千左右已经足够。然而，那时候，我尚未被广泛承认，我是无名小卒。我站在台上，台下没有“pre-persuasion”。
+许多年前，我刚刚开始从事英语教学工作的时候，经常要向听众证明“考托福不需要传说中那么大的词汇量”。传说中需要一万两千词汇量，而我的结论是五千左右已经足够。然而，那时候，我尚未被广泛承认，我是无名小卒。我站在台上，台下没有“pre-persuasion”。
 
 我要做的很难，也很简单。说它很难，是因为我说出来人家不一定相信，说它很简单，是因为我只需要把所有的证据拿出来，展示给听众。每一次我都要在台上告诉大家我是如何将二十多年的真题变成电子版（自己手敲），而后用什么软件进行统计（WordSmith），统计方法是怎样的（出现一次以上，十七次以下），统计结果是什么样的（实际上，二十多年的真题中出现过的 Token 总计才有 9800 多个），这个结果怎么理解（go、goes、went、gone，只能算一个词，interest、interests、interesting、interested 可能就不能算做是一个词），这个结论的意义究竟是什么（TOEFL 考试的难度实际上只不过被人为提高的，很多学生只不过是被吓倒了而已……）……
 
@@ -27,6 +27,6 @@
 
 每一次，我都能在台上清楚地观察到听众态度上的转变。从狐疑到接受，从接受到理解，从理解到恍然大悟，从恍然大悟到期待新的惊喜……
 
-事实上，最终，很难说是生活习惯渗透到工作习惯之中，还是反过来工作习惯渗透到生活习惯之中。但是，最终它会成为一个习惯。长此以往，加以时日，最终，你会被身边的人认为是一个“值得信赖”的人——这其实就是所谓的“pre-persuasion”。
+事实上，最终，很难说是生活习惯渗透到工作习惯之中，还是反过来工作习惯渗透到生活习惯之中。但是，最终它会成为一个习惯。长此以往，假以时日，最终，你会被身边的人认为是一个“值得信赖”的人——这其实就是所谓的“pre-persuasion”。
 
 如若有一天，你的“名声远扬”，大家都知道你是一个“绝对不说胡话”的人，那么，“pre-persuasion”就不再是可望不可及的东西。
