--- a/ch16.md
+++ b/ch16.md
@@ -16,7 +16,7 @@
 初学者往往误以为气氛好是好的讲演的关键。进而误入歧途，把大量的时间精力投入到“如何取悦听众”上去（这本身并没有错得过于离谱，因为帮助听众解决问题，依然是“取悦”的一种），再进一步，因此整天想着怎么逗听众开心，妄图仅靠冷笑话（讲者不见得觉得冷）、低级笑话（讲者自己以为是高级的）博得听众（这就开始错得离谱了，听众显然不是来听笑话的——除非你是郭德纲、周立波、或者 Joe
 Wong）……
 
-事实上，很多的时候，当听众听到震撼他们心灵的、改变他们故有想法的、甚至令他们觉得醍醐灌顶的内容之时，他们并不见得有所反应——因为他们的所有精力全都被思考占用了……于是，场上的气氛并不见得一定会很热烈。
+事实上，很多的时候，当听众听到震撼他们心灵的、改变他们固有想法的、甚至令他们觉得醍醐灌顶的内容之时，他们并不见得有所反应——因为他们的所有精力全都被思考占用了……于是，场上的气氛并不见得一定会很热烈。
 
 把解决方案讲解得足够清楚、足够生动有趣，当然是讲者不懈的追求。然而，前提却是那是个真正简单、有效的解决方案，能够解决的是真实存在的问题，是大多数人都为之困惑苦恼的问题……
 
