--- a/ch18.md
+++ b/ch18.md
@@ -8,11 +8,11 @@
 > A: “……”（说了个什么结论）\
 >  B: “嗯？你确定是这样的？”\
 >  A: “我昨天在某本书上看到的！”\
->  B: “哦……那本书呢？”\
+>  B: “哦……哪本书呢？”\
 >  A: “不会骗你的啦！明天带给你！”\
 >  B: “好吧……”
 
-可是，一旦你在讲台上，讲的过程中，抑或讲完之后，随时都可能会有人打断你，提出他的质疑。而当你尝试这回答这些质疑的时候，只要证据不在手边，就很可能出现这种情况：哪怕你是对的，也没人相信你……或者至少不会所有人都相信你。
+可是，一旦你在讲台上，讲的过程中，抑或讲完之后，随时都可能会有人打断你，提出他的质疑。而当你尝试着回答这些质疑的时候，只要证据不在手边，就很可能出现这种情况：哪怕你是对的，也没人相信你……或者至少不会所有人都相信你。
 
 有一次讲课结束之后，有位学生上来问我说，“老师，您讲得不对！ＸＸ老师说了，However 这个单词不能放在句首！”
 
@@ -41,7 +41,7 @@ sloth 究竟应该翻译成什么？
 
 而把“sloth”翻译成“树獭”，是完全没有根据的。“獭”与树懒根本不属同一科目，是与树懒完全没有关系的动物：
 
-我很怀疑“树獭”（**tǎ**）这种译法是这么来的：某个“稍有文化”的人，在某次遇到“树懒”这种译法时，自以为是地认为，既然是动物，怎么可以用树心旁呢？当然应该用犬字旁——所以就用了“獭”这个字。全然不顾 otter 其实和 sloth 一点儿关系都没有！
+我很怀疑“树獭”（**tǎ**）这种译法是这么来的：某个“稍有文化”的人，在某次遇到“树懒”这种译法时，自以为是地认为，既然是动物，怎么可以用竖心旁呢？当然应该用犬字旁——所以就用了“獭”这个字。全然不顾 otter 其实和 sloth 一点儿关系都没有！
 
 然而，一知半解、只知其一不知其二的人永远是多数，所以，“树獭”这种翻译竟然流传颇广。语言演化中有个很令人无奈的现象：长期的误用、或者广泛的误用，慢慢会竟然会被语言接受的（就好像“long
 time no
