--- a/ch19.md
+++ b/ch19.md
@@ -27,7 +27,7 @@ gun”，第一个就是 wikipedia 上对这个概念的解释。
 
 讲者应该绞尽脑汁为自己的讲座造一个“契诃夫之枪”。制造方法是“倒过来想”：
 
--   什么内容会另听众跌破眼镜？（或捧腹大笑？或震撼？或……？）
+-   什么内容会令听众跌破眼镜？（或捧腹大笑？或震撼？或……？）
 -   为了引出最后的结局，需要做哪些铺垫？
 -   我如何用“不起眼”的方式把这些线索讲出来？
 -   我又如何让听众不知不觉记得这些线索？
