--- a/ch23.md
+++ b/ch23.md
@@ -29,4 +29,4 @@ X，在比较之后发现惊人的相似之处之后还要反复品味……
 
 不过，如若讲者使用类比激活听众的思维，并不断用类比去驱动听众的思维，那效果就很不一样：因为这时听众的思维很难脱离轨道。实践证明，类比是最好的令听众“注意力集中”的手段。类比也是最好的互动方式之一，因为本质上来看，类比是在“邀请听众思考”，并最终通过讲者所提供的精妙的类比，获得思维的快感。
 
-好的类比往往得之不易。需要长时间思考、雕琢，才能达到惊人而有准确的效果。对于讲者来说，平日里不断创造、积累、雕琢精妙的类比，比收集笑话重要多了。
+好的类比往往得之不易。需要长时间思考、雕琢，才能达到惊人而又准确的效果。对于讲者来说，平日里不断创造、积累、雕琢精妙的类比，比收集笑话重要多了。
