--- a/ch29.md
+++ b/ch29.md
@@ -3,7 +3,7 @@
 
 当你在讲话的时候，如果你不尽力，[听众就不见得能够做到自动与你感同身受](ch13.md)。而当你讲某些话，或做某些事的时候，听众的反应常常（这个概率可能非常高）超乎你的想象。
 
-你以为听众会笑的时候，他们可能毫无反应，然而，他们可能会在你完全想象不到的地方爆笑。你以为听众会感受到强烈共鸣之时，他们可能表现出来的却是迷惑；在某一场合曾经给你带来雷鸣般的掌声的话语，在另外一个场合很可能给你来的却是鸦雀无声……
+你以为听众会笑的时候，他们可能毫无反应，然而，他们可能会在你完全想象不到的地方爆笑。你以为听众会感受到强烈共鸣之时，他们可能表现出来的却是迷惑；在某一场合曾经给你带来雷鸣般的掌声的话语，在另外一个场合很可能给你带来的却是鸦雀无声……
 
 印象中有一次我在台上为刚刚讲过的一个故事顺嘴加上了个评语（事实上，这句话连我自己都不知道是从哪里冒出来的）：“……成熟的男人懂得如何让别人舒服。”万万没想到的是这句话引来的先是爆笑，而后竟然还有热烈地掌声。台上的我暗暗愣了一下才反应过来──大概是因为这句话被理解为一个聪明的双关。事后我仔细回忆了一下当时的情况，又仔细从各个角度体会了一下这个句子的各种可能的意味，然后把这句话变成了几乎可以随时用来获得听众“会心一笑”的东西。
 
