--- a/ch31.md
+++ b/ch31.md
@@ -19,7 +19,7 @@
 
 很多的时候，人们讨厌被说服，因为那往往意味着说自己过去是无知的、或者是错误的。随着年纪的增加，人们甚至开始讨厌那些说服的尝试，一方面是因为成见已经形成，它只想被认同，而不是修正，另外一方面是长期的实践说明大多数“说服”都有背后原本不可见，甚至是“不可告人”的目的。
 
-当讲者同时讲两件事情的时候，一主一副。主角在前，配角在后。甚至，配角可能只不过是若隐若现。不过，有趣的是，往往主角并不起作用（至少没有像想象得那样其作用），可是配角却像是有魔法一样影响了听众（甚至会超乎讲者的意料）。
+当讲者同时讲两件事情的时候，一主一副。主角在前，配角在后。甚至，配角可能只不过是若隐若现。不过，有趣的是，往往主角并不起作用（至少没有像想象得那样起作用），可是配角却像是有魔法一样影响了听众（甚至会超乎讲者的意料）。
 
 事实上，这样做，从某种意义上来讲更为容易。这也是为什么电影里的人物比课堂上的老师更具影响力的重要原因之一。当学生坐在教室里听课之时，他们潜意识里在抵御教师所讲；当观众坐在银幕前的时候，他们关注的是“享受故事情节”，潜意识里没有任何抵触情绪，不知不觉接受了很多故事细节中强调的价值观或者其他的什么道理。于是，这些观众不仅夸奖那情节的精彩，还直言不讳地承认看过之后有很多“感悟”。
 
