--- a/ch32.md
+++ b/ch32.md
@@ -22,7 +22,7 @@ PowerPoint 或 Keynote 的另外最重要的局限是它们会使得讲者只能
 -   现场的显示设备是否可以良好运转？
 -   你的笔记本电脑是否与现场的显示设备兼容？（Mac 用户可能要带转接头……）
 -   你确定你自己知道如何外接另一个显示器，并调整好分辨率、颜色等等么？
--   如果你使用 U 盘携带你的文件，那你应该确定你的 U 盘没有问题，别到了现场才发现拷贝不出来……如果可能，应该找一个网盘保存文件，万一 U 盘除了问题，还可以现场下载……
+-   如果你使用 U 盘携带你的文件，那你应该确定你的 U 盘没有问题，别到了现场才发现拷贝不出来……如果可能，应该找一个网盘保存文件，万一 U 盘出了问题，还可以现场下载……
 -   确定你存进 U 盘、或者上传到网盘的文件真的是最终版，而非之前的某个半成品……
 -   你的笔记本是否有足够的电量？确定你携带了笔记本电源（经常有人到了现场才发现自己的笔记本电池没电了，可是“竟然”也没有带电源线……）
 -   你确定你的遥控设备电池没问题么？
