--- a/ch33.md
+++ b/ch33.md
@@ -8,7 +8,7 @@ workshop](http://www.duarte.com/)，由 Nancy Duarte 领衔）制作的。
 
 所以，对普通人来说，也许最简单最有效，最值的遵循的首要原则是：**简单**。
 
-一切从简。亮丽的背景图片、眩目的动画效果、精致的字体……这些，有固然好，没有也并不影响实际效果——尽管看起来总是有更好一些。事实上，听众最关心的依然是内容。这跟电影一样，无论特技有多眩，故事很烂的话，一切都是白搭。不用任何特级，也一样可以拍出好电影。
+一切从简。亮丽的背景图片、眩目的动画效果、精致的字体……这些，有固然好，没有也并不影响实际效果——尽管看起来总是有更好一些。事实上，听众最关心的依然是内容。这跟电影一样，无论特技有多眩，故事很烂的话，一切都是白搭。不用任何特技，也一样可以拍出好电影。
 
 简单并不意味着“难看”。对于一个没有学过太多设计的人来说，做到“不难看”的行之有效的方法，就是保持简单。不要动用三个以上的元素。颜色如此，字体如此，动画效果如此。反正，要是把元素控制在三个以内，无论如何都不会太难看，甚至会往往因此被称为“简约的风格”。
 
