--- a/ch34.md
+++ b/ch34.md
@@ -3,7 +3,7 @@
 
 大概每个人都羡慕那些能够在台上“旁征博引”的人。可是，作为新手，在台上讲话时必须小心自己的话题所涉及的范围。
 
-掌控一个话题，需要很多的时间经历积累才行，而不是靠小聪明摆弄几下就可以搞定的。哪怕一个很小的话题，都有无数讲者可能实现无法想到的质疑，有些是问题、有些是陷阱，这些需要长时间的思考、观察、积累、反刍才可以全面了解。
+掌控一个话题，需要很多的时间经历积累才行，而不是靠小聪明摆弄几下就可以搞定的。哪怕一个很小的话题，都有无数讲者可能事先无法想到的质疑，有些是问题、有些是陷阱，这些需要长时间的思考、观察、积累、反刍才可以全面了解。
 
 比如，你在台上讲到“人应该顾及他人的感受”——这原本是无论是谁都可以理解、接受的观点。可是你在举过若干个例子之后，顺带提及“燃放鞭炮就是一种典型的毫不在意他人感受的行为”。在你看来，这是“显而易见”的事实，并且，你实际上并没有把你的根本想法完全说出来——你实际上恨不得“禁止私人燃放烟花爆竹”。
 
