--- a/ch35.md
+++ b/ch35.md
@@ -15,7 +15,7 @@
 
 不要以为这是天生的；更合理的解释是，基于种种原因，他们很早就注意到沟通能力的重要，于是，在不知不觉之间已经有过很久很久的“实战、总结、进步”的过程。毫无疑问，沟通能力几乎全部靠后天习得。
 
-在任何一个群体中，对这种人的态度大致可以分为两种：羡慕与自卑——当然，大多数人要么自卑，要么二者皆有。只有少数人对他们抱有单纯而有健康的羡慕。于是，面对这种人的存在，大多数人选择放弃——基于自卑态度的行为。放弃的理由往往听起来铿锵有力无可辩驳：“我没有天份”。
+在任何一个群体中，对这种人的态度大致可以分为两种：羡慕与自卑——当然，大多数人要么自卑，要么二者皆有。只有少数人对他们抱有单纯而又健康的羡慕。于是，面对这种人的存在，大多数人选择放弃——基于自卑态度的行为。放弃的理由往往听起来铿锵有力无可辩驳：“我没有天份”。
 
 而只有一小部分人（我很怀疑不会超过 10%）知道这种人的存在实际上是难得而又珍贵的学习机会，通过仔细观察，细心揣摩，反复练习，最终也能习得本质上相同的能力（因性格不同最终风格肯定有所不同）。
 
