--- a/ch36.md
+++ b/ch36.md
@@ -1,7 +1,7 @@
 （三十六）废话！废话？ 
 ======================
 
-新手往往误以为很多话“没必要说”，因为觉得那是“人尽皆知的废话”。与此同时，当讲者把一件事情的方方面面透彻地讲清楚之时，听众之中有一部分为认为讲者“废话太多”——因为很多事情作为听众的他们认为“没必要说，因为谁都知道”。
+新手往往误以为很多话“没必要说”，因为觉得那是“人尽皆知的废话”。与此同时，当讲者把一件事情的方方面面透彻地讲清楚之时，听众之中有一部分会认为讲者“废话太多”——因为很多事情作为听众的他们认为“没必要说，因为谁都知道”。
 
 我们在讲话的时候，一定要传递有根据的结论。结论是否可以被接受，要看根据是否合理、充分，这好像是显而易见的。然而，判断根据是否合理、充分，很大程度上依赖听者的信息和知识的储备，甚至他们的情绪控制能力和理性思考潜力。
 
@@ -15,6 +15,6 @@
 
 她认为我讲课“废话”比较多，为什么呢？因为有些（显然，她认为“很多”）内容对她来说，是“已知”的——她希望我不必要讲，而她不必听，浪费时间。可问题在于，我做为讲者，没办法清楚地知道她那个已知未知、必要不必要的边界究竟在哪里。更严重的问题在于，台下不止她一个人（我甚至不知道她坐在哪里，就算我能够把听众大致划分为几个群体，也没办法确定她属于哪一个群体）。而关键又在于，我要把结论传递给每一个人，于是就要把每一个人（或者所属的群体）必须知道的、能够理解的根据清楚地讲出来……
 
-所以，总是有“废话”，必要而又必须的废话。（后来我离开新东方的时候，为了让更多的人知道他们所面临的尴尬的本质究竟是什么，就把那写“废话”重新整理，集结成册，书名叫[《把时间当作朋友》](http://xiaolai.gitbooks.io/ba-shi-jian-dang-zuo-peng-you/content/)……）
+所以，总是有“废话”，必要而又必须的废话。（后来我离开新东方的时候，为了让更多的人知道他们所面临的尴尬的本质究竟是什么，就把那些“废话”重新整理，集结成册，书名叫[《把时间当作朋友》](http://xiaolai.gitbooks.io/ba-shi-jian-dang-zuo-peng-you/content/)……）
 
-这也是为什么那些有经验的讲者在台上总是从若干个角度阐述同一个问题的原因，也是那写作者为什么在书里总是要举若干个例子证明同一道理的原因。在日常谈话中，我们没必要这样，但是在当众讲话的时候，为了能够更好地传递那些有根据的结论，就只好多少冒一些“可能被认为在讲废话”的风险。
+这也是为什么那些有经验的讲者在台上总是从若干个角度阐述同一个问题的原因，也是那些作者为什么在书里总是要举若干个例子证明同一道理的原因。在日常谈话中，我们没必要这样，但是在当众讲话的时候，为了能够更好地传递那些有根据的结论，就只好多少冒一些“可能被认为在讲废话”的风险。
