--- a/ch37.md
+++ b/ch37.md
@@ -6,7 +6,7 @@
 每一句话，其实都是有所归属的。“赶紧睡觉！”通常只有父母对不太听话的小孩子说。“好好干！”一般是长辈或领导说给新人听的。如果你不是同性恋，那么听到同性对你说肉麻的话，在你确定他们确实是开玩笑之前，你一定会多少有点不舒服，甚至毛骨悚然^[1](#fn_1)^
 ……
 
-在更为细微的地方这种归属造成的扭曲敢更为严重。比如，你如果不是班里学习最好的那个，那么你大讲特讲学习方法，很多人会不屑于听你说话。再比如，如果你不是公认最冷静最善于思考的那个，那么你把想法说出来很可能就算是对的也会被低估。
+在更为细微的地方这种归属造成的扭曲感更为严重。比如，你如果不是班里学习最好的那个，那么你大讲特讲学习方法，很多人会不屑于听你说话。再比如，如果你不是公认最冷静最善于思考的那个，那么你把想法说出来很可能就算是对的也会被低估。
 
 一般来说，你可能获得的建议是这样的：得知道什么话能说，什么话不能说。这个建议的意思是，你要根据你的情况选择你能说的话、该说的话，你说出来别人能听的话。
 
