--- a/ch03.md
+++ b/ch03.md
@@ -15,7 +15,7 @@
 
 你坐在下面，你投入时间，你投入精力，你知道这些都是沉没成本……你必然跟所有人一样希望你有所收获……
 
-收获究竟是什么呢？或者，换一种说法，究竟什么样的东西算做收获呢？如果，你获得了重要的信息，你获得了你原本不知道的信息，你理解了你原本不可能理解的复杂道理……这样的话，你会认为你“有所收获”是不是？
+收获究竟是什么呢？或者，换一种说法，究竟什么样的东西算作收获呢？如果，你获得了重要的信息，你获得了你原本不知道的信息，你理解了你原本不可能理解的复杂道理……这样的话，你会认为你“有所收获”是不是？
 
 但是，反过来，如若你花费了几十分钟时间，听到的全都是无关紧要的内容，全都是你已经知道的信息，或者全都是简单到谁都明白的东西，你的感受如何呢？设身处地想一想，你的答案就在告诉你作为讲者应该讲些什么了……
 
